--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "Name: date, Length: 10809, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "max          365.000000             460.000000      NaN  "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "[10085 rows x 5 columns]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,6 +676,110 @@
    "metadata": {},
    "source": [
     "This crosstab shows the number of units offered by each host for the last 5 quarters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>date</th>\n",
+       "      <th>2021-09-14</th>\n",
+       "      <th>2021-12-11</th>\n",
+       "      <th>2022-03-12</th>\n",
+       "      <th>2022-06-08</th>\n",
+       "      <th>2022-09-12</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>room_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Entire home/apt</th>\n",
+       "      <td>8681</td>\n",
+       "      <td>9222</td>\n",
+       "      <td>9831</td>\n",
+       "      <td>10251</td>\n",
+       "      <td>10762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Private room</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>2201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shared room</th>\n",
+       "      <td>118</td>\n",
+       "      <td>120</td>\n",
+       "      <td>117</td>\n",
+       "      <td>110</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hotel room</th>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "date             2021-09-14  2021-12-11  2022-03-12  2022-06-08  2022-09-12\n",
+       "room_type                                                                  \n",
+       "Entire home/apt        8681        9222        9831       10251       10762\n",
+       "Private room           1999        2021        2014        2004        2201\n",
+       "Shared room             118         120         117         110         110\n",
+       "Hotel room               11          11          10          10          10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CT = pd.crosstab(index=df.room_type, columns=[df.date], values = df.id.count(), aggfunc = 'count')\n",
+    "CT.sort_values('2022-09-12', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 10762 'Entire home/apt' rentals offered in September 2022 vs 8681 for the same period last year. The difference is 2081, a 24% increase in one year."
    ]
   }
  ],
